--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <title>Quotes Generator</title>
   </head>
   <body>
-    <h1>Simple The Best Quotes</h1>
-    <div id="quoteDisplay"></div>
-    <!-- Quotes will display here -->
-    <button onclick="newQuote()">New Quote</button>
-    <script src="script.js"></script>
+    <div class="app">
+      <header>Daily Quotes</header>
+      <section class="quotes">
+        <div class="quote-text" id="js-quote-text"></div>
+      </section>
+      <section class="controls">
+        <button type="button" id="js-new-quote" class="new-quote button">
+          Generate a new quote
+        </button>
+        <a class="twitter button" id="js-tweet" target="_blank" rel="noreferrer"
+          >Tweet it!</a
+        >
+      </section>
+    </div>
   </body>
 </html>
