--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Quotes Generator</title>
   </head>
   <body>
@@ -21,5 +22,6 @@
         >
       </section>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
